--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 9000
-DB_NAME: guvinodejsday5
+DB_NAME= guvinodejsday5
 DB_URL =mongodb+srv://mani143tech:mani4213@cluster0.ckxmigv.mongodb.net/
 
 
